src/test/ui/numeric/numeric-suffix/numeric-suffix-i32.stderr
error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:6:16
   |
LL |     foo::<i32>(42_usize);
   |                ^^^^^^^^ expected `i32`, found `usize`
   |
help: change the type of the numeric literal from `usize` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:9:16
   |
LL |     foo::<i32>(42_u64);
   |                ^^^^^^ expected `i32`, found `u64`
   |
help: change the type of the numeric literal from `u64` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:12:16
   |
LL |     foo::<i32>(42_u32);
   |                ^^^^^^ expected `i32`, found `u32`
   |
help: change the type of the numeric literal from `u32` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:15:16
   |
LL |     foo::<i32>(42_u16);
   |                ^^^^^^ expected `i32`, found `u16`
   |
help: change the type of the numeric literal from `u16` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:18:16
   |
LL |     foo::<i32>(42_u8);
   |                ^^^^^ expected `i32`, found `u8`
   |
help: change the type of the numeric literal from `u8` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:21:16
   |
LL |     foo::<i32>(42_isize);
   |                ^^^^^^^^ expected `i32`, found `isize`
   |
help: change the type of the numeric literal from `isize` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:24:16
   |
LL |     foo::<i32>(42_i64);
   |                ^^^^^^ expected `i32`, found `i64`
   |
help: change the type of the numeric literal from `i64` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:28:16
   |
LL |     foo::<i32>(42_i16);
   |                ^^^^^^ expected `i32`, found `i16`
   |
help: change the type of the numeric literal from `i16` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:31:16
   |
LL |     foo::<i32>(42_i8);
   |                ^^^^^ expected `i32`, found `i8`
   |
help: change the type of the numeric literal from `i8` to `i32`
   |
LL |     foo::<i32>(42_i32);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:34:16
   |
LL |     foo::<i32>(42.0_f64);
   |                ^^^^^^^^ expected `i32`, found `f64`
   |
help: change the type of the numeric literal from `f64` to `i32`
   |
LL |     foo::<i32>(42i32);
   |                  ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i32.rs:37:16
   |
LL |     foo::<i32>(42.0_f32);
   |                ^^^^^^^^ expected `i32`, found `f32`
   |
help: change the type of the numeric literal from `f32` to `i32`
   |
LL |     foo::<i32>(42i32);
   |                  ~~~

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.
